ajout statuts reservations, mail attente

--- a/anemone_coffee/src/i18n/en.json
+++ b/anemone_coffee/src/i18n/en.json
@@ -77,7 +77,7 @@
 
     "reservation": {
         "title":"Reserve a table", 
-        "name":"Name :",
+        "name":"Firstname :",
         "email":"E-mail address :",
         "phone":"Phone number :",
         "date":"Date :",
