--- a/anemone_coffee/src/i18n/en.json
+++ b/anemone_coffee/src/i18n/en.json
@@ -62,7 +62,7 @@
 
     "event": {
         "title":"! Big opening night!",
-        "text":"See you on January 25 for our opening party. On the program: tapas, wine, music and friends! We look forward to seeing you there. "
+        "text":"Anémone café is a project that didn't come to town by chance. Our aim is to be at the heart of people's lives, to create a place where people can get together. That's why every month we'll be organising a creative, artistic or craft event. So that we can discover new things, meet new people and forge new links. The programme will soon be available here. One evening a week will also be dedicated to a particular musical theme, so you can get together with friends or family and listen to your favourite tunes (disco, jazz, bossa nova, etc.). Don't hesitate to drop by the café with your recommendations."
     },
 
     "menu": {
