--- a/anemone_coffee/src/i18n/fr.json
+++ b/anemone_coffee/src/i18n/fr.json
@@ -60,7 +60,7 @@
 
         "event": {
             "title":"! Grosse soirée d'ouverture !",
-            "text":"Rendez-vous le 25 janvier pour notre soirée d’ouverture. Au programme : des tapas, du vin, de la musique et des copains ! Bonne ambiance garantie, on a hâte de vous retrouver. "
+            "text":"Anémone café est un projet qui ne s’est pas construit en ville par hasard. En effet, nous avons à cœur d’être au centre de la vie des gens, de pouvoir créer un lieu de convivialité. C’est pour cette raison que nous organiserons chaque mois un évènement autour de la création, de l’art ou de l’artisanat etc.. Pour pouvoir découvrir de nouvelles choses mais aussi de nouvelles personnes et créer du lien. Le programme sera bientôt disponible ici. Un soir par semaine sera également dédié à un thème musical en particulier, pour se retrouver entre amis ou famille sur l’air de vos sons préférés (disco, jazz, bossa nova..). N’hésitez pas à passer au café nous faire de vos recommandations.  "
         },
 
         "menu": {
