ajout zen chef et finalisation

--- a/anemone_coffee/src/i18n/en.json
+++ b/anemone_coffee/src/i18n/en.json
@@ -62,8 +62,8 @@
     },
 
     "event": {
-        "title":"🎉 Big opening night not to be missed!",
-        "text":"We invite you to join us on January 25th to celebrate our grand opening in style! </br> <strong>On the agenda:</strong> delicious tapas, fine wine, lively music, and of course, plenty of good friends!</br> The great atmosphere is guaranteed, and we can't wait to see you there to share this memorable evening with you!"
+        "title":"🎉 Soon, evenings will be organized!",
+        "text":"We can't wait to welcome you for unique events at our restaurant! Very soon, we will be hosting themed evenings, special brunches, and much more. <br></br>Stay tuned so you don't miss any of our upcoming events. <br></br>Follow us on our social media or check back here to discover the next dates!"
     },
 
     "menu": {
