add mentions legales

--- a/anemone_coffee/src/i18n/fr.json
+++ b/anemone_coffee/src/i18n/fr.json
@@ -95,6 +95,7 @@
             "propos": "À propos",
             "reservation": "Réservation",
             "event":"Découvrir les prochains évènements",
+            "mentionsLegales":"Mentions légales",
             "tel": "01 34 18 43 99",
             "mail":"anemonecafe95@gmail.com"
 
