--- a/anemone_coffee/src/i18n/fr.json
+++ b/anemone_coffee/src/i18n/fr.json
@@ -3,7 +3,7 @@
     "knowUsLabel" : "A propos",
     "conceptLabel": "Concept",
     "valuesLabel" : "Nos valeurs",
-    "reservationLabel": "Réservation",
+    "reservationLabel": "RÉSERVATION",
     "eventsLabel": "Évènements",
     "menuLabel": "Menus",
     "contactLabel": "Contact",
