add events correction

--- a/anemone_coffee/src/i18n/fr.json
+++ b/anemone_coffee/src/i18n/fr.json
@@ -60,8 +60,8 @@
         },
 
         "event": {
-            "title":"🎉 Bientôt, des soirées seront organisées !",
-            "text":"Nous avons hâte de vous accueillir pour des événements uniques dans notre restaurant ! Très bientôt, nous organiserons des soirées, des brunchs spéciaux et bien plus encore. <br></br>Restez à l'affût pour ne rien manquer de notre programmation. <br></br>Suivez-nous sur nos réseaux sociaux ou revenez ici pour découvrir les prochaines dates !"
+            "title":"🎉 Nous avons hâte de vous accueillir pour des événements uniques dans notre restaurant !",
+            "text":"Restez à l'affût pour ne rien manquer de notre programmation. <br></br>Suivez-nous sur nos réseaux sociaux ou revenez ici pour découvrir les prochaines dates !"
         },
 
         "menu": {
