add button shop et detail navbar

--- a/anemone_coffee/src/i18n/en.json
+++ b/anemone_coffee/src/i18n/en.json
@@ -6,6 +6,7 @@
     "reservationLabel": "Reservation",
     "menuLabel": "Menus",
     "eventsLabel": "Events",
+    "boutiqueLabel":"The shop",
     "contactLabel": "Contact",
     "commandLabel":"Order",
     "homeTitle": "Welcome to Anémone Coffee",
