--- a/anemone_coffee/src/i18n/fr.json
+++ b/anemone_coffee/src/i18n/fr.json
@@ -5,6 +5,7 @@
     "valuesLabel" : "Nos valeurs",
     "reservationLabel": "RÉSERVATION",
     "eventsLabel": "Évènements",
+    "boutiqueLabel":"La boutique",
     "menuLabel": "Menus",
     "contactLabel": "Contact",
     "commandLabel":"Commande",
